Fixed bugs with swagger docs
